# discord-cortex-prime-bot

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PRIVACY_POLICY.md  README.md  TERMS_OF_SERVICE.md  cortex-bot.service  cortex-prime-rules-extraction.md  cortex_bot.db  install.sh  pyproject.toml
.pdf-extract/: ch1-core.txt  ch2-characters.txt  ch3-scenes.txt  ch4-sessions.txt  ch6-lists.txt  glossary.txt  primer.txt  rules-ch1-core.md  rules-ch2-characters.md  rules-ch3-scenes.md  rules-ch6-lists.md  rules-glossary.md  rules-primer.md
openspec/changes/docs-and-help/: design.md
openspec/changes/formatter-ux-overhaul/: design.md  proposal.md  tasks.md
openspec/changes/gm-pool-builder/: proposal.md
openspec/changes/post-roll-enhancements/: design.md
openspec/changes/pp-xp-buttons/: proposal.md
openspec/changes/roll-pool-buttons/: design.md  proposal.md  tasks.md
openspec/specs/accessibility/: spec.md
openspec/specs/action-menu/: spec.md
openspec/specs/campaign-lifecycle/: spec.md
openspec/specs/dice-rolling/: spec.md
openspec/specs/doom-and-crisis-pools/: spec.md
openspec/specs/environment-config/: spec.md
openspec/specs/gm-button-views/: spec.md
openspec/specs/gm-delegation/: spec.md
openspec/specs/gm-roll/: spec.md
openspec/specs/help-system/: spec.md
src/cortex_bot/: bot.py  config.py  utils.py
tests/: test_database.py  test_delegation.py  test_dice.py  test_formatter.py  test_guided_messages.py  test_help.py  test_integration.py  test_roller.py  test_state_manager.py  test_undo_feedback.py  test_views.py
(+79 files in other folders)
